--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    container_name: course-recommender-api
+    container_name: course-aggregator-api
     ports:
       - '3000:3000'
     env_file:
